--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -2,8 +2,8 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
-      <trans-unit id="8870711330013548872" datatype="html">
-        <source>Online</source>
+      <trans-unit id="1408539028324192457" datatype="html">
+        <source>Online2</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/main/main.html</context>
           <context context-type="linenumber">15,16</context>
