--- a/src/locale/messages.ar.xlf
+++ b/src/locale/messages.ar.xlf
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en" datatype="plaintext" original="ng2.template">
+  <file source-language="en" target-language="ar" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="2652675418243084367" datatype="html">
         <source>Free Temporary Email Service - Secure &amp; Anonymous Temp Mail</source>
+        <target>خدمة بريد إلكتروني مؤقت مجانية - آمنة ومجهولة الهوية</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.html</context>
           <context context-type="linenumber">7,8</context>
