--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -367,7 +367,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">76,78</context>
+          <context context-type="linenumber">81,83</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.expired" datatype="html">
@@ -391,130 +391,137 @@
           <context context-type="linenumber">48,50</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="quickEmail.copyButton" datatype="html">
-        <source><x id="INTERPOLATION" equiv-text="{{copied ? &apos;Copied&apos; : &apos;Copy&apos;}}"/></source>
+      <trans-unit id="quickEmail.copiedMessage" datatype="html">
+        <source>copied</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">63,64</context>
+          <context context-type="linenumber">65,67</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="quickEmail.copyMessage1" datatype="html">
+        <source>copy</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
+          <context context-type="linenumber">67,69</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.copyButtonMobile" datatype="html">
         <source><x id="INTERPOLATION" equiv-text="{{copied ? &apos;Copied!&apos; : &apos;Copy&apos;}}"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">90,91</context>
+          <context context-type="linenumber">95,96</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.howToUse" datatype="html">
         <source> How to use:</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">102,103</context>
+          <context context-type="linenumber">107,108</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.instruction1" datatype="html">
         <source>• Use for quick verifications or one-time registrations</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">104,105</context>
+          <context context-type="linenumber">109,110</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.instruction2" datatype="html">
         <source>• Expires automatically in <x id="INTERPOLATION" equiv-text="{{pageTimeCount}}"/> minutes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">105,106</context>
+          <context context-type="linenumber">110,111</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.instruction3" datatype="html">
         <source>• Click &quot;Reset&quot; to extend time back to <x id="INTERPOLATION" equiv-text="{{pageTimeCount}}"/> minutes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">106,107</context>
+          <context context-type="linenumber">111,112</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.instruction4" datatype="html">
         <source>• Check inbox below for received emails</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">107,109</context>
+          <context context-type="linenumber">112,114</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.inbox" datatype="html">
         <source>Inbox</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">121,122</context>
+          <context context-type="linenumber">126,127</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.autoRefresh" datatype="html">
         <source>Auto-refresh in <x id="INTERPOLATION" equiv-text="{{ countdown() }}"/>s</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">123,124</context>
+          <context context-type="linenumber">128,129</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.expiredInbox" datatype="html">
         <source>Email expired. Generate a new email to view inbox.</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">134,136</context>
+          <context context-type="linenumber">139,141</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.waitingForMessages" datatype="html">
         <source>Waiting for messages for <x id="START_TAG_SPAN" ctype="x-span" equiv-text="&lt;span class=&quot;font-medium&quot;&gt;"/><x id="INTERPOLATION" equiv-text="{{currentEmail}}"/><x id="CLOSE_TAG_SPAN" ctype="x-span" equiv-text="&lt;/span&gt;"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">140,142</context>
+          <context context-type="linenumber">145,147</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.featuresTitle" datatype="html">
         <source>Quick Email Features</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">171,172</context>
+          <context context-type="linenumber">176,177</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature1Title" datatype="html">
         <source><x id="INTERPOLATION" equiv-text="{{pageTimeCount}}"/>-Minute Expiry</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">176,177</context>
+          <context context-type="linenumber">181,182</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature1Desc" datatype="html">
         <source>Perfect for quick verifications</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">178,180</context>
+          <context context-type="linenumber">183,185</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature2Title" datatype="html">
         <source>Instant Generation</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">183,185</context>
+          <context context-type="linenumber">188,190</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature2Desc" datatype="html">
         <source>Get a new email instantly</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">185,187</context>
+          <context context-type="linenumber">190,192</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature3Title" datatype="html">
         <source>Privacy Focused</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">190,192</context>
+          <context context-type="linenumber">195,197</context>
         </context-group>
       </trans-unit>
       <trans-unit id="quickEmail.feature3Desc" datatype="html">
         <source>Completely anonymous</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/compoents/quick-email/quick-email.component.html</context>
-          <context context-type="linenumber">192,195</context>
+          <context context-type="linenumber">197,200</context>
         </context-group>
       </trans-unit>
       <trans-unit id="saveSuccess.title" datatype="html">
