--- a/src/locale/messages.ar.xlf
+++ b/src/locale/messages.ar.xlf
@@ -515,7 +515,7 @@
       </trans-unit>
       <trans-unit id="home.title" datatype="html">
         <source>Free Temporary Email Service - Secure &amp; Anonymous Temp Mail</source>
-        <target>خدمة البريد الإلكتروني المؤقت المجانية - بريد مؤقت آمن ومجهول</target>
+        <target>خدمة البريد الإلكتروني المؤقت المجانية - بريد مؤقت آمن ومجهول بدون تسجيل</target>
       </trans-unit>
       <trans-unit id="home.subtitle" datatype="html">
         <source> Keep your inbox safe with our <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>free temporary email<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/> service. Get instant <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>temp mail<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/> to block spam, stay private, and skip sign-ups, no registration needed! </source>
@@ -1364,7 +1364,7 @@
 
           <trans-unit id="seo.home.title" datatype="html">
         <source>Free Temporary Email Service - Disposable Email Address | TempMail4u</source>
-        <target>خدمة بريد إلكتروني مؤقت مجاني بدون تسجيل – TempMail4u</target>
+        <target>خدمة بريد مؤقت وبريد إلكتروني مجاني بدون تسجيل – TempMail4u</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.ts</context>
           <context context-type="linenumber">47</context>
@@ -1372,7 +1372,7 @@
       </trans-unit>
           <trans-unit id="seo.home.description" datatype="html">
         <source>Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.</source>
-        <target>احصل على عناوين بريد إلكتروني مؤقتة مجانية فورياً. خدمة البريد الإلكتروني المؤقت تحمي خصوصيتك وتحافظ على صندوق الوارد خالياً من الرسائل المزعجة. لا يتطلب تسجيل.</target>
+        <target>احصل على عناوين بريد مؤقت وبريد إلكتروني مؤقتة مجانية فورياً. خدمة البريد الإلكتروني المؤقت تحمي خصوصيتك وتحافظ على صندوق الوارد خالياً من الرسائل المزعجة. لا يتطلب تسجيل.</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.ts</context>
           <context context-type="linenumber">48</context>
