--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -1861,14 +1861,14 @@
         </context-group>
       </trans-unit>
       <trans-unit id="seo.home.title" datatype="html">
-        <source>Free Temporary Email Service - Disposable Email Address | TempMail4u</source>
+        <source>Temp Mail – Free Temporary Email & Disposable Inbox Service</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.ts</context>
           <context context-type="linenumber">57</context>
         </context-group>
       </trans-unit>
       <trans-unit id="seo.home.description" datatype="html">
-        <source>Get free temporary email addresses instantly. Our disposable email service protects your privacy and keeps your inbox spam-free. No registration required.</source>
+        <source>Temp mail lets you create free temporary emails instantly. Keep your inbox private and spam-free with our disposable service. No signup—try it now!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/pages/home/home.ts</context>
           <context context-type="linenumber">58</context>
